--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,16 +1,30 @@
 .button {
+    margin-top: 10px;
+    padding: 5px;
+    font-size: 20px;
+    border-radius: 5px;
 }
 
 .disabled {
+    background: #7fa5cb;
+    color: #7f95ac;
+}
+
+
+.default {
+    color: #fcfcfc;
+    background: #0066cb;
 }
 
 .secondary {
+    color: #0066cb;
+    background: #fdfdfd;
 }
 
-.default {
-}
 
 .red {
+    color: white;
+    background: #be1919;
 }
 
 .default:hover {
