--- a/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
+++ b/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
@@ -1,4 +1,9 @@
 .radio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+
 }
 
 .radio::before {
@@ -9,6 +14,10 @@
 }
 
 .label {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
 }
 
 .options {
