--- a/src/s2-homeworks/hw11/HW11.module.css
+++ b/src/s2-homeworks/hw11/HW11.module.css
@@ -1,8 +1,18 @@
 .container {
+    width: 500px;
 }
 
 .wrapper {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .number {
+    display: block;
+    margin-right: 30px;
+    margin-left: 30px;
+    font-weight: bold;
+    font-size: large;
+    width: 10px;
 }
