--- a/src/s2-homeworks/hw12/HW12.module.css
+++ b/src/s2-homeworks/hw12/HW12.module.css
@@ -18,11 +18,15 @@ html {
     color: var(--color);
 }
 
+html body{
+    background-color: var(--background);
+    color: var(--color);
+}
+
 .select {
-    color: #7f95ac;
+    color: #070707;
     width: 80px;
     border: 2px solid #4cae50;
     height: 2em;
     border-radius: 3px;
-    background: none;
 }
