--- a/src/s2-homeworks/hw15/HW15.module.css
+++ b/src/s2-homeworks/hw15/HW15.module.css
@@ -3,6 +3,7 @@
 }
 
 .developer {
+    margin-bottom: 10px;
 
 }
 
@@ -23,5 +24,6 @@
 }
 
 .loading {
-
+    height: 50px;
+    margin-bottom: 10px;
 }
